--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,66 +1,16 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
 }
 
-.logines{
-    width: 100vw; 
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-body {
-    background-image: linear-gradient(135deg,
-                #4f7df3,
-                #6dc2ff);
-}
-
-.login2 {
-    width: 40%;
-    height: 90vh;
-    background-color:blue;
-    border-top-left-radius: 15px;
-    border-bottom-left-radius: 15px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-}
-
-.login {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    gap: 12px;
-
-    width: 40%;
-    height: 90vh;
-
-    
-    padding: 25px;
-
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-}
-
-.inputs {
-    width: 70%;
-    
-    padding: 20px;
-    border: none;
-    border-color: black;
-    border-radius: 12px;
-    transition: 0.2s;
-}
-.inputs:focus {
-    outline: 2px solid #4f7df3;
-    box-shadow: 0 0 4px #4f7df3;
+#root {
+  min-height: 100vh;
 }
